# hc_collections

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: hc_collections.h
include/hc_collections/: doubly_linked_list.h  singly_linked_list.h  singly_linked_set.h
src/: doubly_linked_list.c  hc_collections.c  singly_linked_list.c  singly_linked_set.c
tests/: test_doubly_linked_list.c  test_singly_linked_list.c  test_singly_linked_set.c  ut.h
